--- a/res.rc
+++ b/res.rc
@@ -6,3 +6,4 @@ IDB_D2	BITMAP	"include/coin.bmp"
 IDB_D4	BITMAP	"include/tetra.bmp"
 IDB_D6	BITMAP	"include/hex.bmp"
 IDB_D8	BITMAP	"include/oct.bmp"
+IDB_D10	BITMAP	"include/dec.bmp"
