--- a/res.rc
+++ b/res.rc
@@ -7,3 +7,4 @@ IDB_D4	BITMAP	"include/tetra.bmp"
 IDB_D6	BITMAP	"include/hex.bmp"
 IDB_D8	BITMAP	"include/oct.bmp"
 IDB_D10	BITMAP	"include/dec.bmp"
+IDB_D12	BITMAP	"include/dodec.bmp"
