Added the dX (custom die) to the application. Added a HTML version of the README file.

--- a/res.rc
+++ b/res.rc
@@ -2,6 +2,7 @@
 
 1	24	"include/manifest.xml"
 
+IDB_DX		BITMAP	"include/var.bmp"
 IDB_D2		BITMAP	"include/coin.bmp"
 IDB_D4		BITMAP	"include/tetra.bmp"
 IDB_D6		BITMAP	"include/hex.bmp"
