--- a/res.rc
+++ b/res.rc
@@ -1,4 +1,5 @@
 #include "include/thir.h"
+#include <windows.h>
 
 1	24	"include/manifest.xml"
 
@@ -14,3 +15,15 @@ IDB_D100	BITMAP	"include/2dec.bmp"
 
 IDI_APP		ICON	"include/dodec_32x32.ico"
 IDI_TASKBAR	ICON	"include/oct_16x16.ico"
+
+IDD_PS_NEW	DIALOGEX	0, 0, 160, 50
+STYLE WS_POPUP | WS_BORDER
+CAPTION	"Save new preset"
+FONT 8, "MS Sans Serif"
+{
+  CTEXT		"Specify a name for this preset:", 0, 0, 10, 160, 10
+  EDITTEXT	IDC_PS_NEW_NAME, 10, 20, 140, 10
+  PUSHBUTTON	"&Save", IDOK, 27, 30, 50, 15, BS_DEFPUSHBUTTON
+  PUSHBUTTON	"&Cancel", IDCANCEL, 82, 30, 50, 15
+}
+
