--- a/win32/Makefile
+++ b/win32/Makefile
@@ -5,13 +5,13 @@ RC = windres
 ZIP = "/d/programs/7-Zip/7z.exe"
 ZIPFLAGS = a
 
-OBJS = thir.o res.o mt19937ar.o
+OBJS = third.o res.o mt19937ar.o
 IMGS = include/coin.bmp include/tetra.bmp include/hex.bmp include/oct.bmp include/dec.bmp include/dodec.bmp include/icos.bmp include/2dec.bmp include/dodec_32x32.ico include/oct_16x16.ico include/var.bmp
 
-thir.exe: $(OBJS)
+third.exe: $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LFLAGS)
 
-thir.o: thir.c include/thir.h
+third.o: third.c include/third.h
 	$(CC) $(CFLAGS) -c $<
 
 res.o: res.rc include/manifest.xml $(IMGS)
@@ -21,12 +21,12 @@ mt19937ar.o: mt19937ar.c include/mt19937ar.h
 	$(CC) $(CFLAGS) -c $<
 
 clean:
-	-rm thir.exe $(OBJS)
+	-rm third.exe $(OBJS)
 
-../dist/thir-w32.7z: thir.exe README README.html
+../dist/third-w32.7z: third.exe README README.html
 	$(ZIP) $(ZIPFLAGS) -t7z $@ $^
 
-../dist/thir-w32.zip: thir.exe README README.html
+../dist/third-w32.zip: third.exe README README.html
 	$(ZIP) $(ZIPFLAGS) -tzip $@ $^
 
-dist:	../dist/thir-w32.7z ../dist/thir-w32.zip
+dist:	../dist/third-w32.7z ../dist/third-w32.zip
