Add SVG-based icons for the dice buttons.  These icons aren't quite as precise, but they do look better at small (icon) sizes and include a number, which makes them easier to identify at a glance.

--- a/images/Makefile
+++ b/images/Makefile
@@ -1,22 +1,31 @@
 RT = "povray"
 RTFLAGS = -D +W32 +H24 +A +Q11
 
-PNGS = coin.png tetra.png hex.png oct.png dec.png dodec.png icos.png 2dec.png
 BMPS = coin.bmp tetra.bmp hex.bmp oct.bmp dec.bmp dodec.bmp icos.bmp 2dec.bmp
+RTPNGS = coin.png tetra.png hex.png oct.png dec.png dodec.png icos.png 2dec.png
 
-%.bmp: %.pov
+SVG = "inkscape"
+SVGFLAGS = -z
+
+SVGPNGS = d2.png d4.png d6.png d8.png d10.png d12.png d20.png d100.png mul.png mod.png
+
+$(BMPS): %.bmp: %.pov
 	$(RT) $(RTFLAGS) +FS +O- $< > $@
 
-%.png: %.pov
+$(RTPNGS): %.png: %.pov
 	$(RT) $(RTFLAGS) +FN +UA +O- $< > $@
+
+$(SVGPNGS): %.png: %.svg
+	$(SVG) $(SVGFLAGS) -e $@ $<
 
 bmps: $(BMPS)
 
-pngs: $(PNGS)
+rtpngs: $(RTPNGS)
 
-gtk: $(PNGS)
+svgpngs: $(SVGPNGS)
+
+gtk: $(RTPNGS) $(SVGPNGS)
 	cp -f $^ ../gtk/include/
 
 clean:
-	rm -f $(BMPS)
-	rm -f $(PNGS)
+	rm -f $(BMPS) $(RTPNGS) $(SVGPNGS)
