Add new SVG-based application icon.  The SVG source is included in the distribution package.

--- a/images/Makefile
+++ b/images/Makefile
@@ -7,7 +7,7 @@ RTPNGS = coin.png tetra.png hex.png oct.png dec.png dodec.png icos.png 2dec.png
 SVG = "inkscape"
 SVGFLAGS = -z
 
-SVGPNGS = d2.png d4.png d6.png d8.png d10.png d12.png d20.png d100.png mul.png mod.png
+SVGPNGS = app.png d2.png d4.png d6.png d8.png d10.png d12.png d20.png d100.png mul.png mod.png
 
 $(BMPS): %.bmp: %.pov
 	$(RT) $(RTFLAGS) +FS +O- $< > $@
@@ -24,7 +24,7 @@ rtpngs: $(RTPNGS)
 
 svgpngs: $(SVGPNGS)
 
-gtk: $(RTPNGS) $(SVGPNGS)
+gtk: $(RTPNGS) $(SVGPNGS) app.svg
 	cp -f $^ ../gtk/include/
 
 clean:
