--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,10 +3,11 @@
       package="au.id.swords.third"
       android:versionCode="1"
       android:versionName="1.0">
-	<application android:label="@string/app_name"
-	           android:debuggable="true">
+    <application android:label="@string/app_name"
+               android:debuggable="true">
         <activity android:name=".ThirdActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:icon="@drawable/app_48">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
