--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,5 +14,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".ThirdNamePreset"/>
+        <activity android:name=".ThirdNameProfile"/>
     </application>
 </manifest> 
