Add the ability to delete profiles entirely.

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,5 +15,6 @@
         </activity>
         <activity android:name=".ThirdNamePreset"/>
         <activity android:name=".ThirdNameProfile"/>
+        <activity android:name=".ThirdDelProfile"/>
     </application>
 </manifest> 
