--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="au.id.swords.third"
-      android:versionCode="1"
-      android:versionName="1.0">
+          package="au.id.swords.third"
+          android:versionCode="1"
+          android:versionName="1.0">
     <application android:label="@string/app_name"
-               android:debuggable="true">
+                 android:icon="@drawable/app_48">
         <activity android:name=".ThirdActivity"
                   android:label="@string/app_name"
                   android:icon="@drawable/app_48">
@@ -17,4 +17,5 @@
         <activity android:name=".ThirdNameProfile"/>
         <activity android:name=".ThirdDelProfile"/>
     </application>
+    <uses-sdk android:minSdkVersion="3"/>
 </manifest> 
