--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="au.id.swords.third"
-          android:versionCode="1"
-          android:versionName="1.0">
+          android:versionCode="2"
+          android:versionName="1.01">
     <application android:label="@string/app_name"
-                 android:icon="@drawable/app_48">
+                 android:icon="@drawable/app_48"
+                 android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".ThirdActivity"
                   android:label="@string/app_name"
-                  android:icon="@drawable/app_48">
+                  android:icon="@drawable/app_48"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
