--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -16,7 +16,7 @@
           android:versionName="1.1">
     <application android:label="@string/app_name"
                  android:icon="@drawable/app_48"
-                 android:theme="@android:style/Theme.NoTitleBar">
+                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".ThirdActivity"
                   android:label="@string/app_name"
                   android:icon="@drawable/app_48"
@@ -31,5 +31,5 @@
         <activity android:name=".ThirdDelProfile"/>
         <activity android:name=".ThirdAddInclude"/>
     </application>
-    <uses-sdk android:minSdkVersion="3"/>
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25"/>
 </manifest> 
