--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,7 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // Add other library dependencies here (see the next step)
+    compile 'com.android.support:appcompat-v7:25.1.1'
 }
 
 /**
