--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -11,13 +11,14 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="au.id.swords.third"
+          package="au.id.swords.third2"
           android:versionCode="4"
-          android:versionName="1.2">
+          android:versionName="2.0">
     <application android:label="@string/app_name"
                  android:icon="@drawable/app_48"
-                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ThirdActivity"
+                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                 android:allowBackup="true">
+        <activity android:name="au.id.swords.third2.ThirdActivity"
                   android:label="@string/app_name"
                   android:icon="@drawable/app_48"
                   android:screenOrientation="portrait">
@@ -26,10 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ThirdNamePreset"/>
-        <activity android:name=".ThirdNameProfile"/>
-        <activity android:name=".ThirdDelProfile"/>
-        <activity android:name=".ThirdAddInclude"/>
+        <activity android:name="au.id.swords.third2.ThirdNamePreset"/>
+        <activity android:name="au.id.swords.third2.ThirdNameProfile"/>
+        <activity android:name="au.id.swords.third2.ThirdDelProfile"/>
+        <activity android:name="au.id.swords.third2.ThirdAddInclude"/>
     </application>
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25"/>
 </manifest> 
