--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,19 +10,25 @@
     third is open-source, licensed under the Simplified BSD License, a copy of
     which can be found in the file LICENSE at the top level of the source code.
     -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="au.id.swords.third2"
-          android:versionCode="5"
-          android:versionName="2.1">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="au.id.swords.third2"
+    android:versionCode="5"
+    android:versionName="2.1"
+    >
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25"/>
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/app_48"
-                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                 android:allowBackup="true">
-        <activity android:name="au.id.swords.third2.ThirdActivity"
-                  android:label="@string/app_name"
-                  android:icon="@drawable/app_48"
-                  android:screenOrientation="portrait">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/app_48"
+        android:theme="@style/AppTheme"
+        android:allowBackup="true"
+        >
+        <activity
+            android:name="au.id.swords.third2.ThirdActivity"
+            android:label="@string/app_name"
+            android:icon="@drawable/app_48"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
