--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -19,15 +19,15 @@
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25"/>
     <application
         android:label="@string/app_name"
-        android:icon="@drawable/app_48"
+        android:icon="@mipmap/icon"
         android:theme="@style/AppTheme"
         android:allowBackup="true"
         >
         <activity
             android:name="au.id.swords.third2.ThirdActivity"
             android:label="@string/app_name"
-            android:icon="@drawable/app_48"
-            android:screenOrientation="portrait"
+            android:icon="@drawable/app"
+            android:screenOrientation="sensor"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
