--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -17,6 +17,12 @@
     android:versionName="2.5"
     >
     <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="25"/>
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        />
     <application
         android:label="@string/app_name"
         android:icon="@mipmap/icon"
